<resources>
    <string name="app_name">ShoppingCart</string>
    <string name="ezkart">EZKART</string>
    <string name="ready_to_ad">Ready to add your items to a cart?</string>
    <string name="connect_to_">Connect to a cart</string>
    <string name="check_your_">Check your previous orders here</string>
    <string name="learn_how_t">Learn how to use</string>
    <string name="help">Help</string>
    <string name="orders">Orders</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="email_id_string">Email ID</string>
    <string name="password_string">Password</string>
    <string name="sign_in_string">Sign in</string>
    <string name="forgot_password__string"><u>forgot password?</u></string>
    <string name="don_t_have_an_account__sign_up_now__string">Dont have an account? Sign Up now.</string>
    <string name="ezkart_string">EZKART</string>
    <string name="enter_your_email_and_password_to_login_string">Enter your email and password to login</string>
    <string name="ezkart_ek1_string">EZKART</string>
    <string name="ezkart_ek2_string">EZKART</string>
    <string name="name_string">Name</string>
    <string name="email_id_ek1_string">Email ID</string>
    <string name="password_ek1_string">Password</string>
    <string name="confirm_password_string">Confirm password</string>
    <string name="sign_up_string">Sign up</string>
    <string name="already_have_an_account__sign_in_string">Already have an account? Sign in</string>
    <string name="enter_your_details_to_signup_string">Enter your details to signup</string>
    <string name="ezkart_ek3_string">EZKART</string>
    <string name="connect_to_a_cart_string">Connect to a cart</string>
    <string name="ready_to_add_your_items_to_a_cart__string">Ready to add your items to a cart?</string>
    <string name="orders_string">Orders</string>
    <string name="check_your_previous_orders_here_string">Check your previous orders here</string>
    <string name="help_string">Help</string>
    <string name="learn_how_to_use_string">Learn how to use</string>
    <string name="ezkart_ek4_string">EZKART</string>
    <string name="cart_items_string">Cart Items</string>
    <string name="appel_string">Guava</string>
    <string name="_0_25kg_string">0.25kg</string>
    <string name="rs_20_string">Rs 20</string>
    <string name="remove_string">REMOVE</string>
    <string name="appel_ek1_string">Guava</string>
    <string name="_0_25kg_ek1_string">0.25kg</string>
    <string name="rs_20_ek1_string">Rs 20</string>
    <string name="remove_ek1_string">REMOVE</string>
    <string name="rs_40_string">Rs 40</string>
    <string name="total__string">Total:</string>
    <string name="pay_now_string">PAY NOW</string>
    <string name="ezkart_ek5_string">EZKART</string>
    <string name="store_name_string">Store Name</string>
    <string name="location_string">Location</string>
    <string name="__111_string">$111</string>
    <string name="orange__1_2___apple_2_3__string">Orange (1.2), Apple(2.3)</string>
    <string name="date_string">Date</string>
    <string name="date_ek1_string">Date</string>
    <string name="store_name_ek1_string">Store Name</string>
    <string name="location_ek1_string">Location</string>
    <string name="__111_ek1_string">$111</string>
    <string name="orange__1_2___apple_2_3__ek1_string">Orange (1.2), Apple(2.3)</string>
    <string name="date_ek2_string">Date</string>
    <string name="store_name_ek2_string">Store Name</string>
    <string name="location_ek2_string">Location</string>
    <string name="__111_ek2_string">$111</string>
    <string name="orange__1_2___apple_2_3__ek2_string">Orange (1.2), Apple(2.3)</string>
    <string name="ezkart_ek6_string">EZKART</string>
    <string name="step_1__string">STEP 1: </string>
    <string name="step_2__string">STEP 2: </string>
    <string name="step_3__string">STEP 3: </string>
    <string name="step_4__string">STEP 4: </string>
    <string name="connect_to_device__scan_to_connect__string">Connect to device. Scan to connect.</string>
    <string name="scan_items_to_add__string">Scan items to add.</string>
    <string name="weigh_items_on_weight_sensor__string">Weigh items on weight sensor.</string>
    <string name="place_items_in_the_cart__string">Place items in the cart.</string>
    <string name="name_ek1_string">Name</string>
    <string name="phone_number_string">Phone number</string>
    <string name="email_string">Email</string>
</resources>