<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/enter_your_details_to_signup"
        android:layout_width="218dp"
        android:layout_height="30dp"
        android:text="@string/enter_your_details_to_signup_string"
        android:textColor="@color/email_id_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/AlreayhaveanAccount"
        android:layout_width="239.5dp"
        android:layout_height="28.5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/already_have_an_account__sign_in_string"
        android:textColor="#607AAE"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rectangle_1_shape"
        android:ems="10"
        android:hint="@string/name_string"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="#14274E"
        android:textColorHint="#14274E"
        app:layout_constraintBottom_toTopOf="@+id/AlreayhaveanAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_details_to_signup"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rectangle_1_shape"
        android:ems="10"
        android:hint="@string/email_id_string"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="#14274E"
        android:textColorHint="#14274E"
        app:layout_constraintBottom_toTopOf="@+id/AlreayhaveanAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rectangle_1_shape"
        android:ems="10"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#14274E"
        android:textColorHint="#14274E"
        app:layout_constraintBottom_toTopOf="@+id/AlreayhaveanAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rectangle_1_shape"
        android:ems="10"
        android:hint="@string/confirm_password_string"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#14274E"
        android:textColorHint="#14274E"
        app:layout_constraintBottom_toTopOf="@+id/AlreayhaveanAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="166dp"
        android:layout_height="54dp"
        android:background="@drawable/rectangle_2_shape"
        android:text="@string/sign_up_string"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/AlreayhaveanAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>