<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <View
        android:id="@+id/connectocart"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/connectbutt"
        app:layout_constraintEnd_toEndOf="@+id/ready_to_ad"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/ready_to_ad"
        app:layout_constraintTop_toBottomOf="@+id/ready_to_ad" />

    <View
        android:id="@+id/previousord"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/connectbutt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/connectocart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/connectocart"
        app:layout_constraintTop_toBottomOf="@+id/connectocart"
        app:layout_constraintVertical_bias="0.19" />

    <View
        android:id="@+id/group_19"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        android:foreground="@drawable/ic_baseline_shopping_basket_24"
        android:foregroundTint="#040000"
        app:layout_constraintBottom_toBottomOf="@+id/connectocart"
        app:layout_constraintEnd_toEndOf="@+id/connectocart"
        app:layout_constraintStart_toStartOf="@+id/connectocart"
        app:layout_constraintTop_toTopOf="@+id/connectocart"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/connect_to_"
        android:layout_width="117dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/connect_to_"
        android:textAppearance="@style/connect_to_"
        app:layout_constraintBottom_toBottomOf="@+id/connectocart"
        app:layout_constraintEnd_toEndOf="@+id/connectocart"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="@+id/connectocart"
        app:layout_constraintTop_toBottomOf="@+id/group_19" />

    <TextView
        android:id="@+id/check_your_"
        android:layout_width="233dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/check_your_"
        android:textAppearance="@style/check_your_"
        app:layout_constraintBottom_toTopOf="@+id/previousord"
        app:layout_constraintEnd_toEndOf="@+id/connectocart"
        app:layout_constraintStart_toStartOf="@+id/connectocart"
        app:layout_constraintTop_toBottomOf="@+id/connectocart" />

    <View
        android:id="@+id/connectbutt3"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/connectbutt"
        app:layout_constraintEnd_toEndOf="@+id/previousord"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/previousord"
        app:layout_constraintTop_toBottomOf="@+id/previousord" />

    <View
        android:id="@+id/group_20"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"

        android:foreground="@drawable/ic_baseline_list_alt_24"
        app:layout_constraintBottom_toTopOf="@+id/orders"
        app:layout_constraintEnd_toEndOf="@+id/previousord"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/previousord"
        app:layout_constraintTop_toTopOf="@+id/previousord"
        app:layout_constraintVertical_bias="0.642" />

    <View
        android:id="@+id/group_21"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"

        android:foreground="@drawable/ic_baseline_help_center_24"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintEnd_toEndOf="@+id/connectbutt3"
        app:layout_constraintStart_toStartOf="@+id/connectbutt3"
        app:layout_constraintTop_toTopOf="@+id/connectbutt3" />

    <TextView
        android:id="@+id/ezkart"
        android:layout_width="89dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/ezkart"
        android:textAppearance="@style/ezkart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/learn_how_t"
        android:layout_width="123dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:text="@string/learn_how_t"
        android:textAppearance="@style/learn_how_t"
        app:layout_constraintBottom_toTopOf="@+id/connectbutt3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previousord"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/ellipse_3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ellipse_3"
        app:layout_constraintBottom_toBottomOf="@+id/ezkart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toEndOf="@+id/ezkart"
        app:layout_constraintTop_toTopOf="@+id/ezkart" />

    <TextView
        android:id="@+id/ready_to_ad"
        android:layout_width="245dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/ready_to_ad"
        android:textAppearance="@style/ready_to_ad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ellipse_3"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/ezkart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/help"
        android:layout_width="31dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/help"
        android:textAppearance="@style/help"
        app:layout_constraintBottom_toBottomOf="@+id/connectbutt3"
        app:layout_constraintEnd_toEndOf="@+id/connectbutt3"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/connectbutt3"
        app:layout_constraintTop_toTopOf="@+id/connectbutt3"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/orders"
        android:layout_width="46dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/orders"
        android:textAppearance="@style/orders"
        app:layout_constraintBottom_toBottomOf="@+id/previousord"
        app:layout_constraintEnd_toEndOf="@+id/previousord"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/previousord"
        app:layout_constraintTop_toTopOf="@+id/previousord"
        app:layout_constraintVertical_bias="0.891" />

    <RelativeLayout
        android:id="@+id/homebar"
        android:layout_width="410dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/homebar_ek1"
        app:layout_constraintStart_toStartOf="@+id/homebar_ek1"
        app:layout_constraintTop_toTopOf="@+id/homebar_ek1"><![CDATA[>

        ]]></RelativeLayout>

    <View
        android:id="@+id/homebar_ek1"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/homebar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectbutt3"
        app:layout_constraintVertical_bias="1.0" />


    <ImageView
        android:id="@+id/home"
        android:layout_width="31.77dp"
        android:layout_height="30dp"
        android:contentDescription="vector_ek6"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/homebar_ek1"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="@+id/homebar_ek1"
        app:layout_constraintTop_toTopOf="@+id/homebar_ek1"
        app:layout_constraintVertical_bias="0.644" />



    <ImageView
        android:id="@+id/cart"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="vector_ek7"
        android:src="@drawable/cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homebar_ek1"
        app:layout_constraintVertical_bias="0.644" />

    <ImageView
        android:id="@+id/inputscan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectbutt3"
        app:srcCompat="@drawable/ic_scan1" />




    <!--    <RelativeLayout-->
    <!--        android:id="@+id/homebar"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="70dp"-->
    <!--        android:layout_alignParentLeft="true"-->
    <!--        android:layout_alignParentTop="true"-->
    <!--        android:background="@color/design_default_color_primary_variant"-->
    <!--        android:backgroundTint="#14274E"-->
    <!--        android:elevation="4dp"-->

    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/connectbutt3"-->
    <!--        app:layout_constraintVertical_bias="1.0">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/imageView"-->
    <!--            android:layout_width="71dp"-->
    <!--            android:layout_height="53dp"-->
    <!--            android:layout_alignParentStart="true"-->
    <!--            android:layout_alignParentTop="true"-->
    <!--            android:layout_alignParentleft="true"-->
    <!--            android:layout_marginStart="30dp"-->
    <!--            android:layout_marginTop="6dp"-->
    <!--            android:layout_marginEnd="224dp"-->
    <!--            android:layout_toStartOf="@+id/imageView2"-->
    <!--            app:srcCompat="@drawable/ic_baseline_home_24" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/imageView2"-->
    <!--            android:layout_width="54dp"-->
    <!--            android:layout_height="55dp"-->
    <!--            android:layout_alignParentTop="true"-->
    <!--            android:layout_alignParentEnd="true"-->
    <!--            android:layout_alignParentRight="true"-->
    <!--            android:layout_marginTop="6dp"-->
    <!--            android:layout_marginEnd="32dp"-->
    <!--            android:layout_marginRight="32dp"-->
    <!--            app:srcCompat="@drawable/ic_baseline_shopping_basket_24" />-->
    <!--    </RelativeLayout>-->

    <!--    <RelativeLayout-->
    <!--        android:id="@+id/icon_park_o"-->
    <!--        android:layout_width="45dp"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:background="@drawable/icon_park_o"-->
    <!--        android:clipToOutline="true"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/homebar"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/connectbutt3"-->
    <!--        app:layout_constraintVertical_bias="1.0"-->
    <!--        android:orientation = "horizontal">-->


    <!--        <View-->
    <!--            android:id="@+id/vector"-->
    <!--            android:layout_width="43dp"-->
    <!--            android:layout_height="47dp"-->


    <!--            android:background="@drawable/ic_scanner" />-->
    <!--    </RelativeLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>